# rust_key

./: Cargo.toml  README.md  index.html  package.json  svelte.config.js  tauri.conf.json
src/: app.html  app.rs  global.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: back.rs
src-tauri/src/app/back/: encryption_gestion.rs  file_gestion.rs  master_login.rs
src-tauri/src/app/back/encryption_gestion/: nonce_sequence_gestion.rs
src-tauri/src/app/back/login_gestion/: login_storing.rs
src/app/: back.rs  front.rs  style.rs
src/app/back/: file_gestion.rs  login_gestion.rs  master_login.rs
src/app/back/file_gestion/: nonce_sequence_gestion.rs
src/app/back/login_gestion/: login_storing.rs  password_storing.rs
src/app/front/: login_page.rs  main_page.rs  master_loggin_page.rs  tabs.rs
src/app/front/main_page/: buttons_view.rs  header.rs  logins_list.rs  menus.rs
src/app/style/: button_theme.rs  container.rs  rule.rs  scrollable_theme.rs  text_input.rs  theme.rs
src/routes/: +page.svelte
src/routes/logins/: +page.svelte
style/: login.css
