[package]
name = "rust_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dwrote = "0.11.0"
iced = { version="0.6.0", features = ["image", "debug"] }
ring = "0.16.20"
serde = { version="1.0.150", features = ["derive"] }
serde_json = "1.0.89"
